doc-added content by Sarath

--- a/index.html
+++ b/index.html
@@ -9,5 +9,7 @@
 <body>
     Hi, I am sarath!!
     I started learning web development.
+
+    This is the change made in Sarath-toMakeChanges branch.
 </body>
 </html>
