doc - added new contents

--- a/index.html
+++ b/index.html
@@ -7,9 +7,23 @@
     <title>Document</title>
 </head>
 <body>
-    Hi, I am sarath!!
-    I started learning web development.
+   
 
     This is the change made in Sarath-toMakeChanges branch.
+
+    <h2>Myself....</h2>
+    I am Sarathkumar. A Coding enthusiast from a non-tech background. Currently working in an IT Service-based company.
+    I have have little bit hands-on experience with JAVA and C++. 
+
+    Started my web dev journey with neog camp.
+
+    <h2>Projects</h2>
+    Are you a fan of Attack On titan Anime like me??
+    <p>Then let's check your AOT knowledge with 
+    <a class="link link-primary" href="https://replit.com/@sarathkumarnall/AttackOnTitan-Quiz?v=1"> AOT</a>
+       
+
+</p>
+    <a href="https://www.google.com/">google</a>
 </body>
 </html>
