fea-added contents

--- a/projects.html
+++ b/projects.html
@@ -7,6 +7,10 @@
     <title>Document</title>
 </head>
 <body>
+    <h2>Projects</h2>
+    Are you a fan of Attack On titan Anime like me??
+    <p>Then let's check your AOT knowledge with 
+    <a class="link link-primary" href="https://replit.com/@sarathkumarnall/AttackOnTitan-Quiz?v=1"> AOT</a>
     
 </body>
 </html>
