--- a/index.html
+++ b/index.html
@@ -4,16 +4,35 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Personal Portfolio</title>
+    <link rel="stylesheet" href="styles.css">
+
 </head>
 <body>
-   
+    <nav class="navigation">
+        <div class="nav-header">Sarathkumar</div>
+        <div class="nav-pills">
+            <div>
+                <a class="nav-link link-active" href="/">Home</a>
+            </div>
+            <div>
+                <a class="nav-link" href="/projects.html">Projects</a>
+            </div>
+            <div>
+                <a class="nav-link" href="/blogs.html">Blogs</a>
+            </div>
+        </div>
+    </nav>
+    <header class="header">
+        <img class="header-img" src="binary.png">
+       
+    </header>
 
     This is the change made in Sarath-toMakeChanges branch.
 
     <h2>Myself....</h2>
     I am Sarathkumar. A Coding enthusiast from a non-tech background. Currently working in an IT Service-based company.
-    I have have little bit hands-on experience with JAVA and C++. 
+    I have little bit hands-on experience with JAVA and C++. 
 
     Started my web dev journey with neog camp.
 
