feat-changes made and contents added

--- a/index.html
+++ b/index.html
@@ -23,26 +23,42 @@
             </div>
         </div>
     </nav>
+    <br />
     <header class="header">
-        <img class="header-img" src="binary.png">
+        <img class="header-img" src="/newPurp.jpg">
        
     </header>
-
-    This is the change made in Sarath-toMakeChanges branch.
-
-    <h2>Myself....</h2>
-    I am Sarathkumar. A Coding enthusiast from a non-tech background. Currently working in an IT Service-based company.
+    <br />
+   
+    <section class="block div1-normal">
+    <div class="block-header">Myself....</div><br/>
+    <p>I am Sarathkumar. A Coding enthusiast from a non-tech background. Currently working in an IT Service-based company.
     I have little bit hands-on experience with JAVA and C++. 
 
-    Started my web dev journey with neog camp.
-
-    <h2>Projects</h2>
-    Are you a fan of Attack On titan Anime like me??
-    <p>Then let's check your AOT knowledge with 
-    <a class="link link-primary" href="https://replit.com/@sarathkumarnall/AttackOnTitan-Quiz?v=1"> AOT</a>
-       
-
-</p>
-    <a href="https://www.google.com/">google</a>
+    <p>Started my web dev journey with neog camp.</p>
+    </p>
+    </div>
+    </section>
+    <section class="block">
+    <div class="block-header">Projects</div><br/>
+    <p>check my front-end projects here...</p><br/>
+    <a class="nav-link" href="/projects.html">projects</a>
+    </section>
+    <section class="block div1-normal">
+        <div class="block-header">Blogs</div><br/>
+        <p>Check my blogs here</p><br/>
+        <a class="nav-link" href="/blogs.html">blogs</a>
+    </section>
+    <footer class="navigation">
+        <div class="nav-header">Social Media Handles</div>
+        <div class="nav-pills">
+            <div>
+                <a class="nav-link link-active" href="https://www.linkedin.com/in/sarathkumar-n-827112187/">Linkedin</a>
+            </div>
+            <div>
+                <a class="nav-link link-active" href="https://github.com/Sarathkumar-amat">Github</a>
+            </div>
+        </div>
+    </footer>
 </body>
 </html>
