--- a/projects.html
+++ b/projects.html
@@ -5,12 +5,56 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+    <nav class="navigation">
+        <div class="nav-header">Projects</div>
+        <div class="nav-pills">
+            <div>
+                <a class="nav-link link-active" href="/index.html">Home</a>
+            </div>
+            <div>
+                <a class="nav-link" href="/blogs.html">Blogs</a>
+            </div>
+        </div>
+    </nav>
     <h2>Projects</h2>
-    Are you a fan of Attack On titan Anime like me??
-    <p>Then let's check your AOT knowledge with 
-    <a class="link link-primary" href="https://replit.com/@sarathkumarnall/AttackOnTitan-Quiz?v=1"> AOT</a>
+  
+   
+    <section class="block div1-normal">
+        <div class="block-header">AOT Quiz App</div><br/>
+        <p>  Are you a fan of Attack On titan Anime like me??</p>
+        <p>Then let's check your AOT knowledge with
+        <a href="https://replit.com/@sarathkumarnall/AttackOnTitan-Quiz?v=1">My Aot quiz app</a>
+    </section>
+    <section class="block">
+        <div class="block-header">Banana Translator</div><br/>
+        <p>Find out the language of banana with my  <a href="https://banana-app-vannilajs.netlify.app/">banana translator app</a> </p> 
+    </section>
+    <section class="block div1-normal">
+        <div class="block-header">Yodish Translator</div><br/>
+        <p>Find out the language of yodish with my  <a href="https://yodish-language-translator.netlify.app/">yodish translator app</a> </p> 
+    </section>
+    <section class="block">
+        <div class="block-header">Emoji Interpreter</div><br/>
+        <p>Check out the meanings of some popular emojis with my  <a href="https://codesandbox.io/s/emoji-interpreter-sk-ehw1cf?file=/src/App.js">emoji interpreter</a> </p> 
+    </section>
+    <section class="block div1-normal">
+        <div class="block-header">My recommendations...</div><br/>
+        <p>movies,anime and TV shows - <a href="https://codesandbox.io/s/saraths-recommendations-1puxl6?file=/src/App.js">My favorites</a> </p> 
+    </section>
+    <footer class="navigation">
+        <div class="nav-header">Social Media Handles</div>
+        <div class="nav-pills">
+            <div>
+                <a class="nav-link link-active" href="https://www.linkedin.com/in/sarathkumar-n-827112187/">Linkedin</a>
+            </div>
+            <div>
+                <a class="nav-link link-active" href="https://github.com/Sarathkumar-amat">Github</a>
+            </div>
+        </div>
+    </footer>
     
 </body>
 </html>
