fet-added CLI quiz app about myself

--- a/projects.html
+++ b/projects.html
@@ -29,18 +29,22 @@
         <a href="https://replit.com/@sarathkumarnall/AttackOnTitan-Quiz?v=1">My Aot quiz app</a>
     </section>
     <section class="block">
+        <div class="block-header">How much do you know me?</div><br/>
+        <p>Try out this <a href="https://replit.com/@sarathkumarnall/How-much-do-you-know-me?v=1">CLI quiz app</a> about myself.</p>
+    </section>
+    <section class="block div1-normal">
         <div class="block-header">Banana Translator</div><br/>
         <p>Find out the language of banana with my  <a href="https://banana-app-vannilajs.netlify.app/">banana translator app</a> </p> 
     </section>
-    <section class="block div1-normal">
+    <section class="block">
         <div class="block-header">Yodish Translator</div><br/>
         <p>Find out the language of yodish with my  <a href="https://yodish-language-translator.netlify.app/">yodish translator app</a> </p> 
     </section>
-    <section class="block">
+    <section class="block div1-normal">
         <div class="block-header">Emoji Interpreter</div><br/>
         <p>Check out the meanings of some popular emojis with my  <a href="https://codesandbox.io/s/emoji-interpreter-sk-ehw1cf?file=/src/App.js">emoji interpreter</a> </p> 
     </section>
-    <section class="block div1-normal">
+    <section class="block">
         <div class="block-header">My recommendations...</div><br/>
         <p>movies,anime and TV shows - <a href="https://codesandbox.io/s/saraths-recommendations-1puxl6?file=/src/App.js">My favorites</a> </p> 
     </section>
