added source links

--- a/projects.html
+++ b/projects.html
@@ -20,33 +20,43 @@
         </div>
     </nav>
     <h2>Projects</h2>
-  
-   
+
     <section class="block div1-normal">
         <div class="block-header">AOT Quiz App</div><br/>
         <p>  Are you a fan of Attack On titan Anime like me??</p>
         <p>Then let's check your AOT knowledge with
-        <a href="https://replit.com/@sarathkumarnall/AttackOnTitan-Quiz?v=1">My Aot quiz app</a>
+        <a href="https://replit.com/@sarathkumarnall/AttackOnTitan-Quiz?v=1">My Aot quiz app</a></p><br/>
+        <a class="nav-link" href="https://github.com/Sarathkumar-amat/Attack_On_Titan-Quiz">Source</a>
     </section>
     <section class="block">
         <div class="block-header">How much do you know me?</div><br/>
         <p>Try out this <a href="https://replit.com/@sarathkumarnall/How-much-do-you-know-me?v=1">CLI quiz app</a> about myself.</p>
+        <br/>
+        <a class="nav-link" href="https://github.com/Sarathkumar-amat/How-much-do-you-know-me-">Source</a>
     </section>
     <section class="block div1-normal">
         <div class="block-header">Banana Translator</div><br/>
         <p>Find out the language of banana with my  <a href="https://banana-app-vannilajs.netlify.app/">banana translator app</a> </p> 
+        <br/>
+        <a class="nav-link" href="https://github.com/Sarathkumar-amat/Banana-App-with-VannilaJS">Source</a>
     </section>
     <section class="block">
         <div class="block-header">Yodish Translator</div><br/>
         <p>Find out the language of yodish with my  <a href="https://yodish-language-translator.netlify.app/">yodish translator app</a> </p> 
+        <br/>
+        <a class="nav-link" href="https://github.com/Sarathkumar-amat/Translator-vannilaJavascript">Source</a>
     </section>
     <section class="block div1-normal">
         <div class="block-header">Emoji Interpreter</div><br/>
         <p>Check out the meanings of some popular emojis with my  <a href="https://codesandbox.io/s/emoji-interpreter-sk-ehw1cf?file=/src/App.js">emoji interpreter</a> </p> 
+        <br/>
+        <a class="nav-link" href="https://github.com/Sarathkumar-amat/Emoji-Interpreter">Source</a>
     </section>
     <section class="block">
         <div class="block-header">My recommendations...</div><br/>
         <p>movies,anime and TV shows - <a href="https://codesandbox.io/s/saraths-recommendations-1puxl6?file=/src/App.js">My favorites</a> </p> 
+        <br/>
+        <a class="nav-link" href="https://github.com/Sarathkumar-amat/recommendation-app">Source</a>
     </section>
     <footer class="navigation">
         <div class="nav-header">Social Media Handles</div>
