updated react apps

--- a/projects.html
+++ b/projects.html
@@ -48,15 +48,15 @@
     </section>
     <section class="block div1-normal">
         <div class="block-header">Emoji Interpreter</div><br/>
-        <p>Check out the meanings of some popular emojis with my  <a href="https://codesandbox.io/s/emoji-interpreter-sk-ehw1cf?file=/src/App.js">emoji interpreter</a> </p> 
+        <p>Check out the meanings of some popular emojis with my  <a href="https://emoji-interpreter-sk.netlify.app/">emoji interpreter</a> </p> 
         <br/>
         <a class="nav-link" href="https://github.com/Sarathkumar-amat/Emoji-Interpreter">Source</a>
     </section>
     <section class="block">
         <div class="block-header">My recommendations...</div><br/>
-        <p>movies,anime and TV shows - <a href="https://codesandbox.io/s/saraths-recommendations-1puxl6?file=/src/App.js">My favorites</a> </p> 
+        <p>movies,anime and TV shows - <a href="https://show-recommendation-app.netlify.app/">My favorites</a> </p> 
         <br/>
-        <a class="nav-link" href="https://github.com/Sarathkumar-amat/recommendation-app">Source</a>
+        <a class="nav-link" href="https://github.com/Sarathkumar-amat/the-new-recommendation-app">Source</a>
     </section>
     <footer class="navigation">
         <div class="nav-header">Social Media Handles</div>
